--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "publish": "npm publish --access=public"
+    "publish": "npm publish --access=public",
+    "start": "ts-node --project ./tsconfig.json ./src/index.ts"
   },
   "devDependencies": {
     "@types/jest": "^23.3.13",
     "@types/node": "^11.13.6",
     "jest": "^23.6.0",
     "ts-jest": "^23.10.5",
+    "ts-node": "^8.3.0",
     "tslib": "^1.9.3",
     "typescript": "^3.4.4"
   },
