--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "inlineSources": true,
     "noUnusedLocals": false,
     "skipLibCheck": true,
+    "strictNullChecks": true,
     "noImplicitAny": true
   }
 }
